--- a/templates/web/pormibarrio/faq/faq-es.html
+++ b/templates/web/pormibarrio/faq/faq-es.html
@@ -1,5 +1,77 @@
-[% INCLUDE 'header.html', title = 'Help', bodyclass = 'twothirdswidthpage' %]
+[% INCLUDE 'header.html', title = 'Ayuda', bodyclass = 'twothirdswidthpage' %]
 
 <h1>Preguntas frecuentes</h1>
 
+	<h3>¿Qué es Por mi Barrio?</h3>
+	<p>
+		Por Mi Barrio es una plataforma que permite a las personas que viven en Montevideo enviar reportes sobre daños, desperfectos, vandalismo y otros problemas de nuestra ciudad desde su computadora o celular.
+		Es decir, cuando encuentres un problema en tu barrio (un pozo en la calle, problemas de arbolado o de iluminación, contenedores de basura rotos, etc.) vas a poder entrar en pormibarrio.uy desde tu computadora (ceibalitas incluidas) o celular y reportarlo.
+	</p>
+<p>
+	<h3>¿Cómo funciona?</h3>
+	Los reportes se realizan en 3 simples pasos:
+	1. Reportá un problema en el mapa o sumate a uno ya creado.
+	2. Por Mi Barrio lo ingresa al Sistema Único de Reclamos de la IM
+	3. Te enviamos información sobre el progreso, hasta su solución.
+	Para hacer esto, sólo tenés que localizar el problema en un mapa. También se pueden subir fotos y comentarios. A partir de que creaste o te sumaste a un reclamo, vas a recibir en tu correo electrónico las novedades sobre el mismo.
+	Cuando vuelvas a entrar a la página web vas a poder ver tu reporte marcado en un mapa, así como los de los/as demás usuarios/as. También podrás ver los reportes que la Intendencia de Montevideo (IM) marcó como solucionados y los que todavía son problemas para el barrio.
+</p>
+<p>
+	<h3>¿Qué tipo de cosas puedo reclamar?</h3>
+Por Mi Barrio incorpora múltiples categorías de reclamos y va a seguir sumando nuevas opciones con el tiempo. Sin embargo, es importante aclarar que un reclamo implica problemas como roturas o vandalismo, no pedidos o expresiones de deseo de los vecinos.
+A modo de ejemplo, pedir que se repare un banco de plaza dañado constituye un reclamo, mientras que pedir que se coloquen nuevos semáforos en una esquina, no.
+¡Esto no significa que este tipo de pedidos no sea válido! SImplemente que no entran dentro del cometido de Por Mi Barrio. Para hacerlos, los ususarios deben comunicarse directamente con la Intendencia de Montevideo.
+</p>
+<p>
+	<h3>¿Porqué no puedo reclamar o pedir cualquier cosa?</h3>
+Porque una de las grandes ventajas del sistema es que nos brinda, tanto a las personas que vivimos en Montevideo como a la Intendencia, datos disponibles al público sobre el funcionamiento de los mecanismos de reclamos y la respuesta a los mismos. Cuando se ingresan al sistema pedidos que no pueden ser solucionados por esta vía o se salen del esquema, empeoramos la calidad de los datos con los que podemos conocer cómo, en qué tiempos y con qué nivel de satisfacción se responden a los reclamos de las personas.
+</p>
+<p>
+	<h3>¿Qué hago si el reclamo que quiero realizar ya existe?</h3>
+En ese caso podés sumarte al al reclamo ya denunciado haciendo comentarios en el mismo. también podés subir alguna foto para actualizar la información sobre el mismo.
+</p>
+<p>
+	<h3>¿Puedo adjuntar fotos en el reclamo?</h3>
+Sí, en el formulario de reporte tenés la opción de subir una foto desde tu computadora.
+</p>
+<p>
+	<h3>¿Puedo adjuntar videos en el reclamo?</h3>
+No directamente, por el peso de los videos. Una alternativa sería subir el video a alguna plataforma pública (por ejemplo YouTube) y pegar el link del video en tu comentario o reporte.
+</p>
+<p>
+	<h3>¿Qué es DATA?</h3>
+DATA (Datos Abiertos, Transparencia y Acceso a la información) en una organización de la sociedad civil que tiene como misión la creación de herramientas para el accionar colectivo, participativo y colaborativo, apoyándose en la comunidad a través de las tecnologías de la información y comunicación y el uso de la información pública. Buscamos promover la participación, aportando a facilitar las decisiones de la comunidad y generando nuevos espacios de debate público.
+Trabajamos por la transparencia en el gobierno Uruguayo. Creemos en la horizontalidad y transparencia como forma de construir un espacio donde todos formemos parte de las decisiones.
+</p>
+<p>
+	<h3>¿Quiénes somos?</h3>
+El equipo estable de DATA está formado por 6 personas y es interdisciplinario, pero muchas personas de Uruguay y del mundo nos apoyan en algunos proyectos y de muchas formas. Somos activistas, comunicadores/as, programadores/as, apasionados por la transparencia en el gobierno, mujeres, hombres y soñadores/as.
+</p>
+<p>
+	<h3>¿Por qué lo hacemos?</h3>
+En nuestra visión decimos que “DATA promueve el desarrollo humano a través de la creación, uso e innovación de tecnologías basadas en datos abiertos, para aportar a mejorar nuestras sociedades y nuestros gobiernos”. Con esa consigna como bandera es que ideamos y elegimos los proyectos en los que trabajamos.
+Por mi Barrio es  -y consideramos este punto sumamente importante- una iniciativa que no se termina en la web. Forma parte del programa Ciudades Abiertas de DATA, que pretende transformar las relaciones entre la ciudadanía y los gobiernos locales, empoderando a las personas para participar y colaborar en la resolución de problemas urbanos a través de plataformas web y móviles. Para lograrlo, la plataforma en línea es sólo el primer paso y el programa abarca 18 meses que van desde el desarrollo (etapa actual) hasta el dictado de talleres en los barrios de muy diversas zonas de Montevideo para capacitar a los/as vecinos/as en el uso de la herramienta, al tiempo que tenemos la oportunidad de conocer cómo se utiliza y mejorarla para su aplicación local.
+</p>
+<p>
+	<h3>¿Cómo se financia Por Mi Barrio?</h3>
+Este proyecto fue seleccionado en el Fondo Acelerador de Innovaciones Cívicas  App Cívico de Avina y Omidyar, quienes nos entregaron U$S 100.000 para llevar a cabo el desarrollo, la implementación, la comunicación, la documentación y la replicación en un plazo de 1 año y medio.
+No recibimos fondos de la Intendencia de Montevideo ni de ningún organismo gubernamental o partido político. Tampoco se le cobra por el servicio a usuarios, ni a la Intendencia de Montevideo.
+</p>
+<p>
+	<h3>¿Qué rol cumple la Intendencia de Montevideo en Por Mi Barrio?</h3>
+Se firmó un convenio entre la Intendencia de Montevideo y DATA en el que se establece que, por un lado, DATA se encargará del desarrollo de la plataforma y por otro, la IM se compromete a trabajar en la conexión entre Por Mi Barrio y el Sistema Único de Reclamos de la IM (SUR). La Intendencia de Montevideo también brindará apoyo en la comunicación.
+La plataforma Por Mi Barrio se conecta de forma directa con el SUR, la plataforma asegura que los reportes denunciados llegarán a la división correspondiente de la comuna y permitirá además recibir de forma automática notificaciones sobre la respuesta que la IM da al problema. Esto significa que no sólo se reciben notificaciones cuando el problema está resuelto, sino que también de estados intermedios de avance como -por ejemplo- que la inspección pasó o que se marcó fecha para el arreglo.
+Este nivel de integración con los sistemas del Municipio no tiene precedentes en las instalaciones de este tipo de plataformas en el resto del mundo. 
+</p>
+<p>
+	<h3>¿Puedo reportar desde una ceibalita o un celular?</h3>
+Sí, sólo tenés que entrar a pormibarrio.uy desde tu navegador web y hacer tu reporte desde cualquier dispositivo.
+
+</p>
+<p>
+	<h3>¿Existen otros ejemplos parecidos en el mundo?</h3>
+Por Mi Barrio se basa en FixMyStreet, de My Society (Reino Unido) y estamos muy contentos de contar con el apoyo de esta organización en la implantación de esta plataforma. Otros países también la han implementado como Suiza, Australia, Italia, Finlandia y Nueva Zelanda.
+FixMyStreet es una plataforma de código abierto, esto significa que cualquiera puede tomarla y adaptarla para las necesidades de la ciudad en la que se quiera implementar. Todo esto de forma gratuita. 
+Esperamos que el proyecto aporte nuevas funcionalidades al software, para que sean utilizadas en otras partes del mundo.
+</p>
 [% INCLUDE 'footer.html' %]
