Cambios Diseño HTML

--- a/templates/web/pormibarrio/around/tabbed_lists.html
+++ b/templates/web/pormibarrio/around/tabbed_lists.html
@@ -18,7 +18,7 @@
     <div id="top-reports" class="ir">
         <div class="c-t">
             <h2>Reportes</h2>
-            <p>Aquí encontrará problemas en su zona o en la zona que desee reportar o chequear. Para hacer el reporte sólo debe hacer click en el mapa.</p>
+            <p>Aquí encontrará problemas en su zona o en la zona que desee reportar o chequear. <b>Para hacer el reporte sólo debe hacer click en el mapa en el lugar donde se encuentra el problema.</b></p>
         </div>
     </div>
     <!--/end intro reports-->
