--- a/templates/web/pormibarrio/footer.html
+++ b/templates/web/pormibarrio/footer.html
@@ -1,5 +1,5 @@
                     [% IF pagefooter %]
-                    <footer role="content-info">
+                    <!--<footer role="content-info">
                         <div class="tablewrapper bordered">
                             <div id="footer-mobileapps">
                                 <h4>Mobile apps</h4>
@@ -15,7 +15,7 @@
                                 <ul>
                                     <li>
                                         <h4>[% loc('Are you a developer?') %]</h4>
-                                        <p>[% loc('Would you like to contribute to FixMyStreet? Our code is open source and <a href="http://github.com/mysociety/fixmystreet">available on GitHub</a>.') %]</p>
+                                        <p>[% loc('Would you like to contribute to FixMyStreet? Our code is open source and <a href="http://github.com/datauy/fixmystreet">available on GitHub</a>.') %]</p>
                                     </li>
                                     <li>
                                         <h4>[% loc('Are you from a council?') %]</h4>
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                         <p><a href="/privacy">Privacy and cookies</a></p>
-                    </footer>
+                    </footer> -->
                     [% END %]
                 </div> <!--.content role=main -->
             </div><!-- .container -->
