--- a/templates/web/pormibarrio/index.html
+++ b/templates/web/pormibarrio/index.html
@@ -91,7 +91,7 @@ setTimeout(
             (una organización de la sociedad civil) usando la plataforma de servicios abiertos de la Intendencia 
             de Montevideo y con el apoyo del Defensor del Vecino.</p>
             <div class="c-buttons-intro">
-                <a href="javascript:void(0);" class="btn btn-reportar btn-intro">Como funciona</a>
+                <a href="/faq" class="btn btn-reportar btn-intro">Como funciona</a>
                 <a href="#" onclick="locate()" class="btn btn-green btn-intro">Comenzar ahora</a>
             </div>
             <div class="steps">
@@ -116,7 +116,7 @@ setTimeout(
         <!--/main container-->
 
         <!--FOOTER-->
-        <div class="footer"> 
+        <div class="footer-intro"> 
             <img src="/cobrands/pormibarrio/images/data.png" alt="DATA"/>     
             <a href="/faq" class="know-more">Conoce más sobre PorMiBarrio</a>
             <p class="photo-credit">Fotografía: Gonzalo Díaz Fornaro</p>
