--- a/templates/web/pormibarrio/faq/faq-es.html
+++ b/templates/web/pormibarrio/faq/faq-es.html
@@ -10,11 +10,13 @@
 <p>
 	<h3>¿Cómo funciona?</h3>
 	Los reportes se realizan en 3 simples pasos:
-	1. Reportá un problema en el mapa o sumate a uno ya creado.
-	2. Por Mi Barrio lo ingresa al Sistema Único de Reclamos de la IM
-	3. Te enviamos información sobre el progreso, hasta su solución.
+	<ol>
+		<li>Reportá un problema en el mapa o sumate a uno ya creado.</li>
+		<li>Por Mi Barrio lo ingresa al Sistema Único de Reclamos de la IM.</li>
+		<li>Te enviamos información sobre el progreso, hasta su solución.</li>
+	</ol>
 	Para hacer esto, sólo tenés que localizar el problema en un mapa. También se pueden subir fotos y comentarios. A partir de que creaste o te sumaste a un reclamo, vas a recibir en tu correo electrónico las novedades sobre el mismo.
-	Cuando vuelvas a entrar a la página web vas a poder ver tu reporte marcado en un mapa, así como los de los/as demás usuarios/as. También podrás ver los reportes que la Intendencia de Montevideo (IM) marcó como solucionados y los que todavía son problemas para el barrio.
+	Cuando vuelvas a entrar a la página web vas a poder ver tu reporte marcado en un mapa, así como los de los/as demás usuarios/as. También podrás ver los reportes que la <a href="http://www.montevideo.gub.uy/">Intendencia de Montevideo</a> (IM) marcó como solucionados y los que todavía son problemas para el barrio.
 </p>
 <p>
 	<h3>¿Qué tipo de cosas puedo reclamar?</h3>
@@ -40,7 +42,7 @@ No directamente, por el peso de los videos. Una alternativa sería subir el vide
 </p>
 <p>
 	<h3>¿Qué es DATA?</h3>
-DATA (Datos Abiertos, Transparencia y Acceso a la información) en una organización de la sociedad civil que tiene como misión la creación de herramientas para el accionar colectivo, participativo y colaborativo, apoyándose en la comunidad a través de las tecnologías de la información y comunicación y el uso de la información pública. Buscamos promover la participación, aportando a facilitar las decisiones de la comunidad y generando nuevos espacios de debate público.
+<a href="http://datauy.org/">DATA</a> (Datos Abiertos, Transparencia y Acceso a la información) en una organización de la sociedad civil que tiene como misión la creación de herramientas para el accionar colectivo, participativo y colaborativo, apoyándose en la comunidad a través de las tecnologías de la información y comunicación y el uso de la información pública. Buscamos promover la participación, aportando a facilitar las decisiones de la comunidad y generando nuevos espacios de debate público.
 Trabajamos por la transparencia en el gobierno Uruguayo. Creemos en la horizontalidad y transparencia como forma de construir un espacio donde todos formemos parte de las decisiones.
 </p>
 <p>
@@ -54,7 +56,7 @@ Por mi Barrio es  -y consideramos este punto sumamente importante- una iniciativ
 </p>
 <p>
 	<h3>¿Cómo se financia Por Mi Barrio?</h3>
-Este proyecto fue seleccionado en el Fondo Acelerador de Innovaciones Cívicas  App Cívico de Avina y Omidyar, quienes nos entregaron U$S 100.000 para llevar a cabo el desarrollo, la implementación, la comunicación, la documentación y la replicación en un plazo de 1 año y medio.
+Este proyecto fue seleccionado en el Fondo Acelerador de Innovaciones Cívicas App Cívico de <a href="http://www.avina.net/esp/">Avina</a> y <a href="http://www.omidyar.com/">Omidyar</a>, quienes nos entregaron U$S 100.000 para llevar a cabo el desarrollo, la implementación, la comunicación, la documentación y la replicación en un plazo de 1 año y medio.
 No recibimos fondos de la Intendencia de Montevideo ni de ningún organismo gubernamental o partido político. Tampoco se le cobra por el servicio a usuarios, ni a la Intendencia de Montevideo.
 </p>
 <p>
@@ -70,7 +72,7 @@ Sí, sólo tenés que entrar a pormibarrio.uy desde tu navegador web y hacer tu 
 </p>
 <p>
 	<h3>¿Existen otros ejemplos parecidos en el mundo?</h3>
-Por Mi Barrio se basa en FixMyStreet, de My Society (Reino Unido) y estamos muy contentos de contar con el apoyo de esta organización en la implantación de esta plataforma. Otros países también la han implementado como Suiza, Australia, Italia, Finlandia y Nueva Zelanda.
+Por Mi Barrio se basa en <a href="http://www.fixmystreet.com/">FixMyStreet</a>, de <a href="https://www.mysociety.org/">My Society</a> (Reino Unido) y estamos muy contentos de contar con el apoyo de esta organización en la implantación de esta plataforma. Otros países también la han implementado como Suiza, Australia, Italia, Finlandia y Nueva Zelanda.
 FixMyStreet es una plataforma de código abierto, esto significa que cualquiera puede tomarla y adaptarla para las necesidades de la ciudad en la que se quiera implementar. Todo esto de forma gratuita. 
 Esperamos que el proyecto aporte nuevas funcionalidades al software, para que sean utilizadas en otras partes del mundo.
 </p>
