--- a/templates/web/pormibarrio/report/_item.html
+++ b/templates/web/pormibarrio/report/_item.html
@@ -1,28 +1,29 @@
-<div class="it-r">
-	<div class="r-icon r-category-group-[% problem.category_group(c) %]"></div>
-	<div class="it-r-info">
-		<a class="text" href="[% c.uri_for('/report', problem.id ) %]">
-			[% IF problem.photo;
-				photo = problem.get_photo_params
-			%]
-				<img class="img" height="60" width="90" src="[% photo.url_fp %]" alt="">
-			[% END %]
-				<h3>[% problem.title | html %]</h3>
-				<p>[% prettify_dt( problem.confirmed, 1 ) %]
-					[%- IF dist %], [% dist %]km[% END %]
-					[%- IF include_lastupdate AND problem.confirmed != problem.lastupdate AND problem.whensent != problem.lastupdate %],
-						[% tprintf(loc('last updated %s'), prettify_dt( problem.lastupdate, 1 ) ) %]
-					[%- END %]
+<a class="text" href="[% c.uri_for('/report', problem.id ) %]">
+	<div class="it-r" id="problem-list-[% problem.id %]">
+		<div class="r-icon r-category-group-[% problem.category_group(c) %]"></div>
+		<div class="it-r-info">	
+			<h3 class="r-category-group-[% problem.category_group(c) %]">[% problem.category | html %]</h3>
+			<p>[% problem.title | html %] </p>
+			<ul class="details">
+				<li>[% prettify_dt( problem.confirmed, 1 ) %]</li>
+				[%- IF dist %], <li>[% dist %]km[% END %]</li>
+				[%- IF include_lastupdate AND problem.confirmed != problem.lastupdate AND problem.whensent != problem.lastupdate %],
+					<li>[% tprintf(loc('last updated %s'), prettify_dt( problem.lastupdate, 1 ) ) %]</li>
+				[%- END %]
 				[% IF include_lastupdate %]
 					[% IF problem.bodies_str_ids.size > 1 %] [% loc('(sent to both)') %]
 					[% ELSIF problem.bodies_str_ids.size == 0 %] [% loc('(not sent to council)') %]
 					[% END %]
 				[% END %]
 				[% IF NOT no_fixed AND problem.is_fixed %]
-					[% loc('(fixed)') %]
+					<li class="icon-solved"><span></span></li>
 				[% ELSIF NOT no_fixed AND problem.is_closed %]
-					[% loc('(closed)') %]
-				[% END %]</p>
-		</a>
+					<li>[% loc('closed') %]</li>
+				[% END %]
+				<li class="icon-camera"><span></span></li>
+                <li class="icon-comments"><span></span></li>
+                <li class="icon-tags"><span></span></li>
+            </ul>
+		</div>
 	</div>
-</div>
+</a>
