--- a/templates/web/pormibarrio/report/_main.html
+++ b/templates/web/pormibarrio/report/_main.html
@@ -1,40 +1,20 @@
-<!--
-<div class="problem-header cf">
-    <h1>[% problem.title | html %]</h1>
-
-    <p><em>
-    [% problem.meta_line(c) | html %]
-    [%- IF !problem.used_map AND c.cobrand.moniker != 'emptyhomes' %]; <strong>[% loc('there is no pin shown as the user did not use the map') %]</strong>[% END %]
-    [% IF problem.bodies_str %]
-        [% INCLUDE 'report/_council_sent_info.html' %]
-    [% ELSE %]
-        <br><small>[% loc('Not reported to council') %]</small>
-    [% END %]
-    </em></p>
-    [% INCLUDE 'report/_support.html' %]
-
-    [% IF c.cobrand.moniker == 'southampton' %]
-        [% add_links( problem.detail ) | html_para %]
-        [% INCLUDE 'report/photo.html' object=problem %]
-    [% ELSE %]
-        [% INCLUDE 'report/photo.html' object=problem %]
-        [% add_links( problem.detail ) | html_para %]
-    [% END %]
-
-</div>
--->
 [% IF c.cobrand.allow_photo_display(problem) && problem.photo %]
     [% IF problem.get_photo_params.url_full %]<a href="[% problem.get_photo_params.url_full %]" rel="fancy">[% END %]
 		<img alt="Photo of this report" [% IF problem.get_photo_params.height %]height="[% problem.get_photo_params.height %]" 
 			width="[% problem.get_photo_params.width %]"[% END %] src="[% problem.get_photo_params.url_full %]" class="img-top">
     [%- IF problem.get_photo_params.url_full %]<!--<span>zoom</span>--></a>[% END %]
-[% ELSE %]
-	<img alt="" src="/i/image-report-ref.jpg" class="img-top">
 [% END %]
 <div class="info-report">
 	<!--Intro Report-->
 	<div class="intro-report">
-		<h3>[% problem.title | html %]</h3>
+		<a id="display_problem_close" class="btn btn-close-report" href="#">Cerrar</a>
+		<script>$('#display_problem_close').click(function(){ window.location.href = "/around?latitude="+fixmystreet.latitude+";longitude="+fixmystreet.longitude+"&zoom="+fixmystreet.zoom; return false; });</script>
+		<h3>
+            [% problem.title | html %]
+            [% IF problem.is_fixed %]
+                <img alt="Resuelto" class="img-resuelto" src='/cobrands/pormibarrio/images/resuelto.png' />
+            [% END %]
+        </h3>
 		<address>[% problem.meta_line(c) | html %]</address>
 		<p>[% add_links( problem.detail ) | html %]</p>
 		<span class="sign"><!--[% problem.meta_line(c) | html %]--></span>
