--- a/templates/web/pormibarrio/report/update-form.html
+++ b/templates/web/pormibarrio/report/update-form.html
@@ -7,7 +7,7 @@
 	<input type="hidden" name="id" value="[% problem.id | html %]">
 	
 	<div class="form-group">
-		<input type="text" class="form-control [% IF field_errors.name %] error [% END %]" name="name" id="form_name" value="[% update.name || c.user.name | html %]" placeholder="[% loc('Name') %]">
+		<input type="text" class="form-control [% IF field_errors.name %] error [% END %]" name="name" id="form_name" value="[% update.name || c.user.name | html %]" placeholder="Nombre y apellido">
 
 		<input type="email" name="form_rznvy" id="form_rznvy" value="[% update.user.email | html %]" class="form-control [% IF field_errors.email %] error [% END %]" placeholder="[% loc('Email' ) %]">
 
@@ -95,11 +95,40 @@
 				<a class="green registrate" href="/auth">Regístrate aquí con tu mail</a>
 			</p>
 		</div> <!-- bloque-sesion -->
+		<div class="bloque-registro">
+            <div class="ir">
+                <h2>Regístrate y se parte</h2>
+                <p>Crea una cuenta en PorMiBarrio y comienza a colaborar.</p>
+            </div>
+            <!--<div class="form-group">
+                <input type="email" class="form-control required [% IF field_errors.email %] error [% END %]" value="[% report.user.email | html %]" name="form_email" id="form_email" placeholder="Correo electrónico *" required>
+            </div>-->
+            <div class="form-group">
+                [% INCLUDE 'report/new/extra_name.html' %]
+                <!--<input type="text" placeholder="Nombre y apellido" class="form-focus-trigger validName form-control [% IF field_errors.name %] error [% END %]" value="[% report.name | html %]" name="name" id="form_name" >-->                                
+                <input type="text" placeholder="Cédula de Identidad: 0.000.000-0" class="form-control form-focus-trigger [% IF field_errors.identity_document %] error [% END %]" value="[% report.user.identity_document | html %]" name="identity_document" id="form_identity_document" >
+                <input class="form-control" type="text" value="[% report.user.phone | html %]" name="phone" id="form_phone" placeholder="Teléfono (opcional)">              
+                <input name="password_sign_in" id="password_sign_in" type="password" placeholder="Contraseña" class="form-control [% IF field_errors.password %] error [% END %]" for="form_phone">
+            </div>
+            <!--<div class="checkbox-group">
+                <input type="checkbox" name="may_show_name_social" id="form_may_show_name_social" value="1"[% ' checked' IF report.anonymous==0 OR (c.cobrand.default_show_name AND report.anonymous=='') %]>
+                <label class="inline" for="form_may_show_name_social">[% loc('Show my name publicly') %] </label>
+            </div>-->
+            <!--<div class="checkbox">
+                <label>
+                  <input type="checkbox"> Al continuar con tu registro, aceptas haber leído y aceptado nuestra 
+                  <a href="javascript:;"> Política de privacidad</a>.
+                </label>
+            </div> -->
+            <div class="form-group">
+                <button class="btn btn-block btn-green" type="submit" id="submit_register" name="submit_register">Regístrate y publica</button>
+            </div>
+        </div>
 	</div> <!-- Sign In -->
+
 	[% END %]
 
 	[% IF c.user_exists %]
-		[% INCLUDE name %]
 		<input class="btn btn-sky btn-small btn-comentar" type="submit" id="update_post" value="Comentar">
 	[% ELSE %]
 		<button class="btn btn-sky btn-small btn-comentar btn-disabled" disabled="disabled" type="submit">Comentar</button>
