--- a/web/cobrands/pormibarrio/layout.css
+++ b/web/cobrands/pormibarrio/layout.css
@@ -8,7 +8,7 @@
 .desk-only{display:block}
 .mob-only{display:none}
 body{
-	color:#000;
+	color: white;
 	background:#080000;
 }
 #popup{color:#000}
@@ -117,10 +117,6 @@ body.mappage #user-meta{max-width:none}
 .ie8 body.mappage .nav-wrapper .nav-wrapper-2{position:static}
 .ie8 body.mappage #site-logo{position:absolute}
 body.fullwidthpage .content{width:auto}
-
-body.twothirdswidthpage {
-	color: black;
-}
 
 body.twothirdswidthpage h1 {
 	margin-top:5px;
