--- a/web/cobrands/pormibarrio/main.css
+++ b/web/cobrands/pormibarrio/main.css
@@ -30,6 +30,9 @@ a, button, div.it-r {
 	-moz-transition: all .3s ease;
 	transition: all .3s ease;
 }
+a.btn, a.btn:visited{
+	color: white;
+}
 
 * {
   box-sizing:border-box;
@@ -504,7 +507,7 @@ div.r-category-group-37{
 	background:url(images/r-alcantarillas.png) no-repeat left top;	
 }
 h3.r-category-group-37{
-	color:#6dbcdb;	
+	color:#a40301	
 }
 
 /*Basura*/
@@ -516,7 +519,7 @@ div.r-category-group-40 {
 h3.r-category-group-18,
 h3.r-category-group-38,
 h3.r-category-group-40{
-	color:#a40301;
+	color:#f47026	
 }
 
 /*Barometrica*/
@@ -524,7 +527,7 @@ div.r-barometrica, div.r-category-group-3 {
 	background:url(images/r-barometrica.png) no-repeat left top;	
 }
 h3.barometrica{
-	color:#d9cf48;
+	color:#d9cf48	
 }
 
 /*Vereda*/
@@ -532,7 +535,7 @@ div.r-vereda, div.r-category-group-8 {
 	background:url(images/r-vereda.png) no-repeat left top;	
 }
 h3.vereda{
-	color:#d7dadb;
+	color:#d7dadb	
 }
 
 /*Desarrollo*/
