--- a/templates/web/pormibarrio/footer.html
+++ b/templates/web/pormibarrio/footer.html
@@ -1,37 +1,9 @@
-                    [% IF pagefooter %]
-                    <!--<footer role="content-info">
-                        <div class="tablewrapper bordered">
-                            <div id="footer-mobileapps">
-                                <h4>Mobile apps</h4>
-								<p>
-									<a href="https://itunes.apple.com/gb/app/fixmystreet/id297456545">iPhone</a>
-									and
-									<a href="https://play.google.com/store/apps/details?id=org.mysociety.FixMyStreet">Android</a>
-									apps now available.
-								</p>
-                            </div>
+            </div> <!--.content role=main -->
+        </div><!-- .container -->
 
-                            <div id="footer-help">
-                                <ul>
-                                    <li>
-                                        <h4>[% loc('Are you a developer?') %]</h4>
-                                        <p>[% loc('Would you like to contribute to FixMyStreet? Our code is open source and <a href="http://github.com/datauy/fixmystreet">available on GitHub</a>.') %]</p>
-                                    </li>
-                                    <li>
-                                        <h4>[% loc('Are you from a council?') %]</h4>
-                                        <p>[% loc('Would you like better integration with FixMyStreet? <a href="http://www.mysociety.org/for-councils/fixmystreet/">Find out about FixMyStreet for councils</a>.') %]</p>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <p><a href="/privacy">Privacy and cookies</a></p>
-                    </footer> -->
-                    [% END %]
-                </div> <!--.content role=main -->
-            </div><!-- .container -->
-
-<!-- [% INCLUDE 'debug_footer.html' %] -->
-</body>
+    <!-- [% INCLUDE 'debug_footer.html' %] -->
+    <p>YOOOOOO<p>
+    </body>
     <script type="text/javascript" src="[% version('/js/bootstrap.js') %]"></script>
     <script type="text/javascript" src="[% version('/js/jquery.responsiveText.js') %]"></script>
     <script type="text/javascript" src="[% version('/js/pormibarrio-main.js') %]"></script>
