--- a/templates/web/pormibarrio/report/_main.html
+++ b/templates/web/pormibarrio/report/_main.html
@@ -1,7 +1,6 @@
 [% IF c.cobrand.allow_photo_display(problem) && problem.photo %]
-    [% IF problem.get_photo_params.url_full %]<a href="[% problem.get_photo_params.url_full %]" rel="fancy">[% END %]
-		<img alt="Photo of this report" [% IF problem.get_photo_params.height %]height="[% problem.get_photo_params.height %]" 
-			width="[% problem.get_photo_params.width %]"[% END %] src="[% problem.get_photo_params.url_full %]" class="img-top">
+    [% IF problem.get_photo_params.url_full %]<a href="[% problem.get_photo_params.url_full %]">[% END %]
+		<img alt="Photo of this report" [% IF problem.get_photo_params.height %]height="[% problem.get_photo_params.height %]" width="[% problem.get_photo_params.width %]"[% END %] src="[% problem.get_photo_params.url_full %]" class="img-top">
     [%- IF problem.get_photo_params.url_full %]<!--<span>zoom</span>--></a>[% END %]
 [% END %]
 <div class="info-report">
