--- a/web/cobrands/pormibarrio/layout.css
+++ b/web/cobrands/pormibarrio/layout.css
@@ -11,7 +11,11 @@ body{
 	color: white;
 	background:#080000;
 }
-#popup{color:#000}
+#popup{
+	height: auto !important;
+	width: 250px !important;
+	color:#000;
+}
 h1{margin-top:0}
 .container{
 	margin:0 auto;
@@ -206,7 +210,52 @@ body.twothirdswidthpage .content .sticky-sidebar aside{position:fixed;top:7em;le
 	float: left;
 	width: 100%;
 	z-index: 10;
-	}.shadow-wrap ul#key-tools{border-top:0.25em solid #f90;margin:0;-webkit-box-shadow:0em 0px 1em 1em #fff;-moz-box-shadow:0em 0px 1em 1em #fff;box-shadow:0em 0px 1em 1em #fff}.shadow-wrap ul#key-tools li{border:none}.shadow-wrap ul#key-tools li a,.shadow-wrap ul#key-tools li input[type=submit]{font-size:0.75em;color:#666;padding:0.5em 1.5em 0.5em 0;text-transform:none}.shadow-wrap ul#key-tools li a.abuse,.shadow-wrap ul#key-tools li input[type=submit].abuse{background-image:url("/cobrands/fixmystreet/images/sprite.png");background-position:right -2935px}.shadow-wrap ul#key-tools li a.feed,.shadow-wrap ul#key-tools li input[type=submit].feed{background-image:url("/cobrands/fixmystreet/images/sprite.png");background-position:right -3074px}.shadow-wrap ul#key-tools li a.share,.shadow-wrap ul#key-tools li input[type=submit].share{min-width:5em;background-image:url(/cobrands/fixmystreet/images/share.png);background-position:90% 50%}.shadow-wrap ul#key-tools li a.chevron,.shadow-wrap ul#key-tools li input[type=submit].chevron{background-image:url("/cobrands/fixmystreet/images/sprite.png");background-position:right -3225px}.shadow-wrap ul#key-tools li a.hover,.shadow-wrap ul#key-tools li input[type=submit].hover{background-image:url("/cobrands/fixmystreet/images/sprite.png");background-position:right -1876px}.shadow-wrap ul#key-tools.singleton li{text-align:right}.shadow-wrap ul#key-tools.singleton li a{padding-right:3em}.shadow-wrap.static{padding:0 0 1em 0;position:static}.ie6 .shadow-wrap{padding-top:0}#report-share,#report-updates-data{background-color:#fff}#report-updates-data fieldset{margin-bottom:0}.big-green-banner{top:auto;right:-1.25em;margin-left:-2em;font-size:1.375em;padding:1em 3em 1em 1em;background:#68f url("/cobrands/fixmystreet/images/sprite.png") right -2188px no-repeat}.big-green-banner:before{right:0;left:auto;top:-0.5em;position:absolute;border-top:0.5em solid transparent;border-left:0.5em solid #3360ff;border-bottom:none}.big-green-banner span{display:block;font-size:80%;padding-top:0.5em}.ie6 .big-green-banner{background:#68f url(/cobrands/fixmystreet/images/ie_green_chevron.gif) right center no-repeat}.banner p{top:-2.25em;padding:1em}.banner p:before{left:-0.75em;border-left:0.75em solid transparent;border-bottom:0.75em solid #888}.banner p#fixed{padding-top:5em;background-image:url("/cobrands/fixmystreet/images/sprite.png");background-position:-324px -326px;background-repeat:no-repeat}.banner p#fixed:before{border-bottom:0.75em solid #4b8304}.banner p#closed{padding-top:5em;background-image:url(/cobrands/fixmystreet/images/sprite.png);background-position:-318px -326px;background-repeat:no-repeat}.banner p#closed:before{border-bottom:0.75em solid #666}.ie6 .banner p{top:-1.5em}.ie6 .banner p#fixed{background-image:url(/cobrands/fixmystreet/images/ie_fixed.gif);background-position:center 0.75em}.full-width{margin:0 0 0em -1em;width:29em}input[type=text],input[type=password],input[type=email],textarea{max-width:25em}div.form-error,p.form-error{display:block}input.form-error,textarea.form-error{-webkit-border-radius:0 0 0.25em 0.25em;-moz-border-radius:0 0 0.25em 0.25em;-ms-border-radius:0 0 0.25em 0.25em;-o-border-radius:0 0 0.25em 0.25em;border-radius:0 0 0.25em 0.25em}#report-a-problem-sidebar,.general-sidebar-notes{position:absolute;left:29em;width:15em;-webkit-box-shadow:rgba(0,0,0,0.6) 0px 0px 4px 1px;-moz-box-shadow:rgba(0,0,0,0.6) 0px 0px 4px 1px;box-shadow:rgba(0,0,0,0.6) 0px 0px 4px 1px}#report-a-problem-sidebar{top:5em}#report-a-problem-sidebar div{padding:1em;font-size:0.75em;background:#eeeeee}#report-a-problem-sidebar .sidebar-notes{background:#333333;color:#ffffff}.ie6 #report-a-problem-sidebar,.ie6 .general-sidebar-notes,.ie7 #report-a-problem-sidebar,.ie7 .general-sidebar-notes{left:28.5em;z-index:1}.no-js .general-sidebar-notes,.no-js #report-a-problem-sidebar{position:static;width:auto;-webkit-box-shadow:rgba(0,0,0,0) 0 0 0;-moz-box-shadow:rgba(0,0,0,0) 0 0 0;box-shadow:rgba(0,0,0,0) 0 0 0}.no-js .general-sidebar-notes .sidebar-tips,.no-js .general-sidebar-notes .sidebar-notes,.no-js #report-a-problem-sidebar .sidebar-tips,.no-js #report-a-problem-sidebar .sidebar-notes{font-size:1em}.general-sidebar-notes p{background:#eeeeee;font-size:0.75em;padding:0.75em;margin:0}.general-sidebar-notes p.dark{background:#333333;color:#ffffff}#forgotten-pw{position:relative;left:26.5em;top:-7em;margin-bottom:-7em}
+}
+.shadow-wrap ul#key-tools{
+	border-top:0.25em solid #f90;
+	margin:0;
+	-webkit-box-shadow:0em 0px 1em 1em #fff;
+	-moz-box-shadow:0em 0px 1em 1em #fff;
+	box-shadow:0em 0px 1em 1em #fff;
+}
+.shadow-wrap ul#key-tools li{border:none}
+.shadow-wrap ul#key-tools li a,
+.shadow-wrap ul#key-tools li input[type=submit]{
+	font-size:0.75em;color:#666;padding:0.5em 1.5em 0.5em 0;text-transform:none;
+}
+.shadow-wrap ul#key-tools li a.abuse,.shadow-wrap ul#key-tools li input[type=submit].abuse{
+	background-image:url("/cobrands/fixmystreet/images/sprite.png");background-position:right -2935px;
+}
+.shadow-wrap ul#key-tools li a.feed,.shadow-wrap ul#key-tools li input[type=submit].feed{background-image:url("/cobrands/fixmystreet/images/sprite.png");background-position:right -3074px}
+.shadow-wrap ul#key-tools li a.share,.shadow-wrap ul#key-tools li input[type=submit].share{min-width:5em;background-image:url(/cobrands/fixmystreet/images/share.png);background-position:90% 50%}
+.shadow-wrap ul#key-tools li a.chevron,.shadow-wrap ul#key-tools li input[type=submit].chevron{background-image:url("/cobrands/fixmystreet/images/sprite.png");background-position:right -3225px}
+.shadow-wrap ul#key-tools li a.hover,.shadow-wrap ul#key-tools li input[type=submit].hover{background-image:url("/cobrands/fixmystreet/images/sprite.png");background-position:right -1876px}
+.shadow-wrap ul#key-tools.singleton li{text-align:right}.shadow-wrap ul#key-tools.singleton li a{padding-right:3em}.shadow-wrap.static{padding:0 0 1em 0;position:static}.ie6 .shadow-wrap{padding-top:0}
+#report-share{
+	min-height: 50px;
+	padding: 10px 24px;
+	width: 100%;
+}
+#report-updates-data fieldset{margin-bottom:0}
+.big-green-banner{top:auto;right:-1.25em;margin-left:-2em;font-size:1.375em;padding:1em 3em 1em 1em;background:#68f url("/cobrands/fixmystreet/images/sprite.png") right -2188px no-repeat}
+.big-green-banner:before{right:0;left:auto;top:-0.5em;position:absolute;border-top:0.5em solid transparent;border-left:0.5em solid #3360ff;border-bottom:none}
+.big-green-banner span{display:block;font-size:80%;padding-top:0.5em}
+.ie6 .big-green-banner{background:#68f url(/cobrands/fixmystreet/images/ie_green_chevron.gif) right center no-repeat}
+.banner p{top:-2.25em;padding:1em}
+.banner p:before{left:-0.75em;border-left:0.75em solid transparent;border-bottom:0.75em solid #888}
+.banner p#fixed{padding-top:5em;background-image:url("/cobrands/fixmystreet/images/sprite.png");background-position:-324px -326px;background-repeat:no-repeat}
+.banner p#fixed:before{border-bottom:0.75em solid #4b8304}
+.banner p#closed{padding-top:5em;background-image:url(/cobrands/fixmystreet/images/sprite.png);background-position:-318px -326px;background-repeat:no-repeat}.banner p#closed:before{border-bottom:0.75em solid #666}.ie6 .banner p{top:-1.5em}
+.ie6 .banner p#fixed{background-image:url(/cobrands/fixmystreet/images/ie_fixed.gif);background-position:center 0.75em}
+.full-width{margin:0 0 0em -1em;width:29em}
+input[type=text],input[type=password],input[type=email],textarea{
+	max-width:25em;
+	color: #464646;
+}
+div.form-error,p.form-error{display:block}input.form-error,textarea.form-error{-webkit-border-radius:0 0 0.25em 0.25em;-moz-border-radius:0 0 0.25em 0.25em;-ms-border-radius:0 0 0.25em 0.25em;-o-border-radius:0 0 0.25em 0.25em;border-radius:0 0 0.25em 0.25em}#report-a-problem-sidebar,.general-sidebar-notes{position:absolute;left:29em;width:15em;-webkit-box-shadow:rgba(0,0,0,0.6) 0px 0px 4px 1px;-moz-box-shadow:rgba(0,0,0,0.6) 0px 0px 4px 1px;box-shadow:rgba(0,0,0,0.6) 0px 0px 4px 1px}#report-a-problem-sidebar{top:5em}#report-a-problem-sidebar div{padding:1em;font-size:0.75em;background:#eeeeee}#report-a-problem-sidebar .sidebar-notes{background:#333333;color:#ffffff}.ie6 #report-a-problem-sidebar,.ie6 .general-sidebar-notes,.ie7 #report-a-problem-sidebar,.ie7 .general-sidebar-notes{left:28.5em;z-index:1}.no-js .general-sidebar-notes,.no-js #report-a-problem-sidebar{position:static;width:auto;-webkit-box-shadow:rgba(0,0,0,0) 0 0 0;-moz-box-shadow:rgba(0,0,0,0) 0 0 0;box-shadow:rgba(0,0,0,0) 0 0 0}.no-js .general-sidebar-notes .sidebar-tips,.no-js .general-sidebar-notes .sidebar-notes,.no-js #report-a-problem-sidebar .sidebar-tips,.no-js #report-a-problem-sidebar .sidebar-notes{font-size:1em}
+.general-sidebar-notes p{background:#eeeeee;font-size:0.75em;padding:0.75em;margin:0}
+.general-sidebar-notes p.dark{background:#333333;color:#ffffff}
+#forgotten-pw{position:relative;left:26.5em;top:-7em;margin-bottom:-7em}
 body.frontpage .table-cell .content{margin:1em 0.5em 0}
 body.frontpage .nav-wrapper-2{height:6em}
 body.frontpage #site-header{
