Cambios en categoría otra y mensaje en formulario

--- a/templates/web/pormibarrio/report/new/category_groups.html
+++ b/templates/web/pormibarrio/report/new/category_groups.html
@@ -8,6 +8,7 @@
 </script>
 
 <label class="active" for="categoria">Categoría & subcategoría *</label>
+<p class="help-block">Si la categoría a la que quiere reportar no se encuentra, por favor no lo haga en otra. Con el tiempo iremos incorporando nuevas categorías.</p>
 <select name='category_groups' id='form_category_groups' onchange='form_category_group_onchange()'  class="required" required>
 	[% FOREACH group IN category_groups_seen %]
 		[% group_name = group.1 %]
