Cambios en pin de saneamiento y colores

--- a/web/cobrands/pormibarrio/main.css
+++ b/web/cobrands/pormibarrio/main.css
@@ -504,10 +504,10 @@ h3.r-category-group-39{
 
 /*Saneamiento*/
 div.r-category-group-37{
-	background:url(images/r-alcantarillas.png) no-repeat left top;	
+	background:url(images/r-saneamiento.png) no-repeat left top;	
 }
 h3.r-category-group-37{
-	color: #6dbcdb;	
+	color: #c3c7c8;	
 }
 
 /*Basura*/
